--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/components/OverlayContent/styles.module.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/components/panels/ProcessPanel/components/OverlayContent/styles.module.css
@@ -3,13 +3,16 @@
 .overlay {
   --color-alarm-bg: transparent;
   --border-color: var(--color-alarm-unknown);
+  --border-radius-outer: 12rem;
+  --border-radius-inner: 6rem;
+  ;
   display: flex;
   flex-direction: column;
-  /* min-width: 180rem; */
-  max-width: 220rem;
-  border-radius: 6rem;
-  border: solid 1rem var(--color-gray-53);
-  box-shadow: 2rem 2rem 8rem var(--color-gray-52);
+  flex-wrap: nowrap;
+  padding: 16rem;
+  background-color: var(--color-gray-46);
+  border-radius: var(--border-radius-outer);
+  box-shadow: 2rem 2rem 8rem rgb(30, 30, 30, .4);
   overflow: hidden;
 }
 
@@ -18,7 +21,9 @@
   align-items: center;
   gap: 14rem;
   padding: 0 16rem;
-  background-color: var(--color-gray-43);
+  background-color: var(--color-gray-40);
+  border-radius: var(--border-radius-inner) var(--border-radius-inner) 0 0;
+  overflow: hidden;
 }
 
 .titleSection {
@@ -26,6 +31,7 @@
   flex-direction: column;
   gap: 3rem;
   padding: 12rem 0 14rem;
+  white-space: nowrap;
 }
 
 .headerSubtitle {
@@ -36,8 +42,21 @@
 
 .title {
   color: var(--color-gray-3);
-  font-size: 15rem;
+  font-size: 16rem;
   font-weight: 500;
+}
+
+.bodySection {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 2rem;
+  border-radius: 0 0 var(--border-radius-inner) var(--border-radius-inner);
+  overflow: hidden;
+}
+
+.bodySection>* {
+  background-color: var(--color-gray-51);
 }
 
 .alarmStatusIcon {
@@ -54,9 +73,7 @@
   display: flex;
   align-items: center;
   gap: 6rem;
-  padding: 10rem 16rem;
-  background-color: var(--color-gray-53);
-  border-bottom: 1rem solid var(--color-gray-43);
+  padding: 12rem 16rem;
   color: var(--color-gray-3);
   font-size: 12rem;
   font-weight: 400;
@@ -72,16 +89,30 @@
 }
 
 .kpis {
+  --gap: 24rem;
   flex-shrink: 0;
   display: flex;
   flex-wrap: nowrap;
-  gap: 24rem;
-  padding: 10rem 16rem 16rem;
-  background-color: var(--color-gray-53);
+  gap: var(--gap);
+  padding: 16rem;
 }
 
 .kpi {
   --color-alarm-indicator-normal: var(--color-gray-46);
+  position: relative;
+}
+
+.kpi::after {
+  content: '';
+  position: absolute;
+  width: 1rem;
+  height: 100%;
+  right: calc(var(--gap) * -0.5);
+  background-color: var(--color-gray-46);
+}
+
+.kpi:last-child:after {
+  display: none;
 }
 
 .kpisEmptyState {
