--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/core/css/preflight.css
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/src/lib/core/css/preflight.css
@@ -1,3 +1,4 @@
 /* Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved. 2023 */
 /* SPDX-License-Identifier: Apache-2.0 */
 @import '../../../../node_modules/modern-normalize/modern-normalize.css';
+@import './colors.css';
